--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "typeface-oxygen": "0.0.72",
+    "typeface-oxygen-mono": "0.0.72",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "@types/node": "^13.11.0",
