--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-plugin-typescript": "^2.3.1",
+    "gatsby-plugin-typography": "^2.4.1",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-sharp": "^2.4.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-typography": "^0.16.19",
     "typeface-oxygen": "0.0.72",
     "typeface-oxygen-mono": "0.0.72",
     "typography": "^0.16.19"
