--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
-    "typeface-oxygen": "0.0.72",
-    "typeface-oxygen-mono": "0.0.72",
-    "typography": "^0.16.19"
+    "typeface-oxygen-mono": "0.0.72"
   },
   "devDependencies": {
     "@types/node": "^13.11.0",
@@ -45,9 +43,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/benedicteb/bebweb-2"
   }
 }
