Use short-format commands on small screens

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-media": "^1.10.0",
     "react-typography": "^0.16.19",
     "typeface-oxygen-mono": "0.0.72"
   },
